--- a/css/tachometer.css
+++ b/css/tachometer.css
@@ -7,7 +7,7 @@
     width: 320px;
 }
 .tach-description {
-    margin-bottom:-25px;
+    margin-bottom:-40px;
     width: 320px;
 }
 
